--- a/app/build.gradle
+++ b/app/build.gradle
@@ -392,27 +392,18 @@ apply from: 'https://github.com/mozilla-mobile/android-components/raw/master/com
 // Internal, but stable and convenient.
 import org.gradle.api.internal.artifacts.DefaultModuleIdentifier
 
-// This is the equivalent of what the `org.mozilla.appservices` Gradle plugin
-// achieves, minus asserting that the versions of all the megazord components
-// agree.  This could be added if required.
+// Use a special-purpose appservices megazord with only the bits that Fenix needs.
 afterEvaluate {
-    def megazord = DefaultModuleIdentifier.newId('org.mozilla.appservices', 'fenix-megazord')
-    def megazordComponents = [
-        DefaultModuleIdentifier.newId('org.mozilla.appservices', 'fxaclient'),
-        DefaultModuleIdentifier.newId('org.mozilla.appservices', 'places'),
-        DefaultModuleIdentifier.newId('org.mozilla.appservices', 'push'),
-        DefaultModuleIdentifier.newId('org.mozilla.appservices', 'rustlog'),
-        DefaultModuleIdentifier.newId('org.mozilla.appservices', 'viaduct')
-    ]
+    def fullMegazord = DefaultModuleIdentifier.newId('org.mozilla.appservices', 'full-megazord')
+    def fenixMegazord = DefaultModuleIdentifier.newId('org.mozilla.appservices', 'fenix-megazord')
 
     configurations.each { configuration ->
         configuration.resolutionStrategy.dependencySubstitution.all { dependency ->
             if (dependency.requested instanceof ModuleComponentSelector) {
                 def moduleIdentifier = ((ModuleComponentSelector) dependency.requested).moduleIdentifier
-                if (megazordComponents.contains(moduleIdentifier)) {
-                    def megazordVersion = Deps.mozilla_appservices
-                    def substitution = "${megazord.group}:${megazord.name}:${megazordVersion}"
-                    logger.lifecycle("In ${configuration}: substituting megazord module '$substitution' for component module" +
+                if (moduleIdentifier.equals(fullMegazord)) {
+                    def substitution = "${fenixMegazord.group}:${fenixMegazord.name}:${dependency.requested.version}"
+                    logger.lifecycle("In ${configuration}: substituting megazord module '$substitution' for" +
                                      " '${moduleIdentifier.group}:${moduleIdentifier.name}:${dependency.requested.version}'")
                     dependency.useTarget(substitution)
                 }
